refactor: Update assertions in PostDAOTest and TagDAOTest for improved readability